# Proiect_OOP

./: CMakeLists.txt  Challenge.h  ChallengeFactory.cpp  ChallengeFactory.h  ChallengeManager.cpp  ChallengeManager.h  City.cpp  City.h  EstimateChallenge.cpp  EstimateChallenge.h  Item.cpp  Item.h  Map.cpp  Map.h  MathChallenge.cpp  MathChallenge.h  Metropolis.cpp  Metropolis.h  README.md  Randomised.cpp  Randomised.h  StealItem.cpp  StealItem.h  StealMoney.cpp  StealMoney.h  TheftStrategy.h  Trader.cpp  Trader.h  dangerousCity.cpp  dangerousCity.h  main.cpp  specialCity.cpp  specialCity.h
